Added in Djikstra path finding + separated priorityqueue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ endif (MSVC)
 add_executable(pathfinding-assignment 
 "include/main.cpp"
 "src/astar.cpp"
+"src/djikstra.cpp"
 "src/nodepath.cpp"
 "src/parser.cpp"
 )
